--- a/visualizacao_dados.ipynb
+++ b/visualizacao_dados.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "authorship_tag": "ABX9TyPiwEiAoq5p2AB5B0IVhII3",
       "include_colab_link": true
     },
@@ -10149,7 +10150,7 @@
       "metadata": {
         "id": "zUuJIRi2-9zq"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11158,7 +11159,7 @@
         "id": "Eo3aRJs7i8ce",
         "outputId": "0d3719bd-2110-4216-e413-01d1901dfa0b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11649,7 +11650,7 @@
       "metadata": {
         "id": "U3JIwNnCmhms"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11672,7 +11673,7 @@
       "metadata": {
         "id": "88IF2dcmjPrK"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11694,7 +11695,7 @@
         "id": "x3BUvEtKkpZB",
         "outputId": "1c55b68d-c82a-4173-d2c8-782d549d1795"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11722,7 +11723,7 @@
         "id": "BfDsuCa8hDv7",
         "outputId": "a484d2e6-0e59-4cae-90d7-f172caeee169"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12220,7 +12221,7 @@
         "id": "sVUy_yr8hvUp",
         "outputId": "d5fde988-57ef-4979-ec44-b848314d3b7a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12453,7 +12454,7 @@
         "id": "nuO6Dqjt8EkR",
         "outputId": "028ff042-8f16-4222-e880-5d6784124488"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12493,7 +12494,7 @@
         "id": "AOlaqIP2DqDz",
         "outputId": "0ce16dc5-6814-49f4-894f-ef6f65db83c2"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12564,7 +12565,7 @@
         "id": "a9aJABlLJWy3",
         "outputId": "8428fd05-b08b-44a8-ef74-1d26cb2bc4c0"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12592,7 +12593,7 @@
         "id": "7ytnDKOOMhzb",
         "outputId": "d3e695b4-ca3f-4a1d-8860-f666068a0db4"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12631,7 +12632,7 @@
         "id": "sG6KszimgIUI",
         "outputId": "1b9bcff5-28ac-4a69-c9cb-d87edb3e9dd8"
       },
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12671,7 +12672,7 @@
         "id": "MQWHTvcxidd1",
         "outputId": "310e4ba0-078c-46a1-d2fd-695a50a556e6"
       },
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12729,7 +12730,7 @@
         "id": "X1VHLtHbonn4",
         "outputId": "5adeaac5-a29d-440c-e51f-034d8c74929e"
       },
-      "execution_count": 205,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12787,7 +12788,7 @@
         "id": "6KEcgZ7_qZRe",
         "outputId": "4c88bd04-1e39-4baa-f7d4-13dcb6dede97"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13282,7 +13283,7 @@
         "id": "9WfvygqHpxFv",
         "outputId": "bc28271c-5fac-47b1-97d1-540ef18d9778"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
